--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
+blessed==1.21.0
+cffi==1.17.1
+cryptography==45.0.4
+editor==1.6.6
 inquirerpy==0.3.4
 markdown-it-py==3.0.0
 mdurl==0.1.2
 pfzy==0.3.4
 prompt_toolkit==3.0.51
+pycparser==2.22
 Pygments==2.19.1
+python-dotenv==1.1.0
+readchar==4.2.1
 rich==14.0.0
+runs==1.2.2
 typing_extensions==4.14.0
 wcwidth==0.2.13
+xmod==1.8.1
